--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,21 +1,12 @@
-# This is an example .goreleaser.yml file with some sensible defaults.
-# Make sure to check the documentation at https://goreleaser.com
-
-# The lines below are called `modelines`. See `:help modeline`
-# Feel free to remove those if you don't want/need to use them.
-# yaml-language-server: $schema=https://goreleaser.com/static/schema.json
-# vim: set ts=2 sw=2 tw=0 fo=cnqoj
 
 version: 1
 
 before:
-  hooks:
-    # You may remove this if you don't use go modules.
+  hooks: #execute custom commands or scripts on pre/post build pre/post release
     - go mod tidy
-    # you may remove this if you don't need go generate
     - go generate ./...
 
-builds:
+builds: #configure how the app will be built via GOOS/GOARCH/GOARM
   - env:
       - CGO_ENABLED=0
     goos:
@@ -23,9 +14,8 @@ builds:
       - windows
       - darwin
 
-archives:
+archives: #customize the archive name, file, binary file produced by the build
   - format: tar.gz
-    # this name template makes the OS and Arch compatible with the results of `uname`.
     name_template: >-
       {{ .ProjectName }}_
       {{- title .Os }}_
@@ -38,32 +28,12 @@ archives:
       - goos: windows
         format: zip
 
-changelog:
+changelog: # identify any new features, edits, and bug fixes inherent in each new release
   use: github
 
-  # Sorts the changelog by the commit's messages.
-  # Could either be asc, desc or empty
+
   sort: asc
 
-  # Max commit hash length to use in the changelog.
-  #
-  # 0: use whatever the changelog implementation gives you
-  # -1: remove the commit hash from the changelog
-  # any other number: max length.
-  #
-  # Since: v1.11.2
-  abbrev: -1
-
-
-  # Group commits messages by given regex and title.
-  # Order value defines the order of the groups.
-  # Providing no regex means all commits will be grouped under the default group.
-  #
-  # Matches are performed against the first line of the commit message only,
-  # prefixed with the commit SHA1, usually in the form of
-  # `<abbrev-commit>[:] <title-commit>`.
-  # Groups are disabled when using github-native, as it already groups things by itself.
-  # Regex use RE2 syntax as defined here: https://github.com/google/re2/wiki/Syntax.
   groups:
     - title: Features
       regexp: '^.*?feat(\([[:word:]]+\))??!?:.+$'
