--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,4 +1,3 @@
-
 version: 1
 
 before:
@@ -31,7 +30,6 @@ archives: #customize the archive name, file, binary file produced by the build
 changelog: # identify any new features, edits, and bug fixes inherent in each new release
   use: github
 
-
   sort: asc
 
   groups:
@@ -63,13 +61,7 @@ announce:
     #
     # Default: '{{ .ProjectName }} {{ .Tag }} is out! Check it out at {{ .ReleaseURL }}'
     # Templates: allowed
-    message_template: |
-      iTower {{.Tag}} is out!
-      
-      {{if .changelog}}
-      *Changelog:*
-      {{.changelog}}
-      {{end}}
+    message_template: 'iTower {{.Tag}} is out!'
 
     # The name of the channel that the user selected as a destination for webhook messages.
     channel: 'releases'
